[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gsview"
version = "0.1.0"
description = "Street View sampling and download for Mumbai, Navi Mumbai, and Delhi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "geo-sampling>=0.2.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "python-dotenv>=1.2.2",
    "folium>=0.15.0",
    "streetlevel>=0.12.5",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
]

[project.scripts]
gsview = "gsview.cli:main"

[project.urls]
Repository = "https://github.com/soodoku/missing_women_gsview"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
